feat(context): prepare public 0.4.0 release
